--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ idna==2.8
 importlib-metadata==0.23
 kombu==4.6.5
 more-itertools==7.2.0
+psycopg2-binary==2.8.4
 pytz==2019.3
 redis==3.3.11
 requests==2.22.0
